# SeaDrive-MLM

./: .gitignore  README.md  analyze_monte_carlo_results.py  animate_boat_trajectories.py  boat_monte_carlo.bash  plot_boat_trajectories.py
VLM/: finetune_qwen3_vl_colreg.py  local_test_qwen35_api.py  make_success_hf_dataset.py  server_finetune_qwen3_vl_colreg.sh  server_qwen35_api_test.sh  visualize_training_results.py
src/fuel_planner/active_perception/include/active_perception/: frontier_finder.h
src/fuel_planner/bspline_opt/src/: bspline_optimizer.cpp
src/fuel_planner/exploration_manager/: CMakeLists.txt
src/fuel_planner/exploration_manager/config/: monitor_myboat.rviz
src/fuel_planner/exploration_manager/include/exploration_manager/: expl_data.h
src/fuel_planner/exploration_manager/launch/: boat_collision.launch  collision_llm.launch  exploration.launch  monitor.launch
src/fuel_planner/exploration_manager/script/: record_rl_snapshots.py  rl_tsp_infer.py
src/fuel_planner/exploration_manager/src/: fast_exploration_fsm.cpp  fast_exploration_manager.cpp
src/fuel_planner/path_searching/src/: astar2.cpp
src/fuel_planner/plan_env/: package.xml
src/fuel_planner/plan_env/include/plan_env/: map_ros.h  (+1 more)
src/fuel_planner/plan_env/src/: map_ros.cpp
src/fuel_planner/plan_manage/: CMakeLists.txt
src/fuel_planner/plan_manage/config/: traj.rviz
src/fuel_planner/plan_manage/src/: planner_manager_dev.cpp
src/myboat_description/: CMakeLists.txt  package.xml
src/myboat_description/meshes/: myboat_propeller.STL  roam-zju.STL
src/myboat_description/meshes/experimental_target/: README.md
src/myboat_description/meshes/experimental_target3/: material.mtl
src/myboat_description/urdf_experimental/: target2_experimental_mesh.xacro  target3_experimental_mesh.xacro
src/myboat_description/urdf_myboat/: myboat.urdf.xacro  myboat.xacro  myboat_dynamics_plugin.xacro  myboat_thruster_config.xacro  myboat_thrusters.xacro
src/myboat_gazebo/: CMakeLists.txt  package.xml
src/myboat_gazebo/include/myboat_gazebo/: myboat_dynamics_plugin.hh  myboat_thrust_plugin.hh
src/myboat_gazebo/launch/: e1_myboat_gazebo1.launch  e1_myboat_gazebo2.launch  e1_myboat_gazebo3.launch  e2_myboat_manual_control.launch  exploration_to_myboat.launch  myboat_keyboard_teleop.launch  test_cpp_myboat_control.launch  test_py_myboat_control.launch  vla_mission.launch
src/myboat_gazebo/resource/dinov2_prototypes/: README.md
src/myboat_gazebo/src/: collision_behavior_fsm_node.py  collision_cmd_mux_node.py  collision_ego_cruise_node.py  collision_perception_node.py  collision_risk_assessor_node.py  collision_state_estimator_node.py  collision_target_cruise_node.py  collision_trajectory_planner_node.py  colregs_llm_decision_node.py  dinov2_ship_classifier.py  exploration_to_myboat.cpp  gazebo_model_cleanup_node.py  lidar_water_noise_node.cpp  myboat_dynamics_plugin.cpp  myboat_odom_relay.py  myboat_odom_tf.py  myboat_teleop.py  myboat_thrust_plugin.cpp  odom_to_pose.py  pairwise_distance_debug_node.py  rviz_trigger_bridge.py  test_cpp_myboat_control.cpp  test_pos_cmd_publisher.cpp  test_py_myboat_control.py  trajectory_recorder_node.py  twist2thrust.py  vla_mission_node.py
src/myboat_gazebo/worlds/: myocean1.world  myocean2.world  myocean3.world  vel_test.world
src/seadrive_planner/active_perception/src/: frontier_finder.cpp  graph_node.cpp
src/seadrive_planner/exploration_manager/: package.xml
src/seadrive_planner/exploration_manager/launch/: algorithm.xml  boat_exploration.launch
src/seadrive_planner/exploration_manager/script/: rl_tsp_infer_atsp_open.py  rl_tsp_infer_service.py
src/seadrive_planner/path_searching/src/: kinodynamic_astar.cpp
src/seadrive_planner/plan_env/: CMakeLists.txt
src/seadrive_planner/plan_env/src/: sdf_map.cpp
src/seadrive_planner/plan_manage/launch/: kino_algorithm.xml  topo_algorithm.xml
src/seadrive_planner/plan_manage/src/: planner_manager.cpp  traj_server.cpp
src/seadrive_planner/poly_traj/src/: traj_generator.cpp
src/usv_gazebo_plugins/: CMakeLists.txt
src/vrx_gazebo/: CMakeLists.txt  package.xml
src/vrx_gazebo/worlds/2019_phase2/: dock0.world  dock2.world  dock3.world  dock4.world  dock5.world  nav_challenge0.world  nav_challenge3.world  nav_challenge4.world  nav_challenge5.world  perception2.world  perception3.world  perception4.world  perception5.world  scan_and_dock1.world  scan_and_dock3.world  scan_and_dock4.world  scan_and_dock5.world  stationkeeping0.world  stationkeeping1.world  stationkeeping2.world  stationkeeping3.world  stationkeeping4.world  stationkeeping5.world  wayfinding0.world  wayfinding1.world  wayfinding2.world  wayfinding3.world  wayfinding4.world  wayfinding5.world
src/vrx_gazebo/worlds/2019_practice/: dock1.world  nav_challenge0b.world  nav_challenge1.world  nav_challenge2.world  perception0.world  perception1.world  scan_and_dock0.world  scan_and_dock2.world  stationkeeping0.world  stationkeeping1.world  stationkeeping2.world  wayfinding0.world  wayfinding1.world  wayfinding2.world
src/vrx_gazebo/worlds/2022_phase2/: gymkhana0.world  gymkhana1.world  gymkhana2.world  gymkhana3.world  gymkhana4.world  gymkhana5.world  perception0.world  perception1.world  perception2.world  perception3.world  perception4.world  perception5.world  scan_dock_deliver0.world  scan_dock_deliver1.world  scan_dock_deliver2.world  scan_dock_deliver3.world  scan_dock_deliver4.world  scan_dock_deliver5.world  stationkeeping0.world  stationkeeping1.world  stationkeeping2.world  stationkeeping3.world  stationkeeping4.world  stationkeeping5.world  wayfinding0.world  wayfinding1.world  wayfinding2.world  wayfinding3.world  wayfinding4.world  wayfinding5.world  wildlife0.world  wildlife1.world  wildlife2.world  wildlife3.world  wildlife4.world  wildlife5.world
src/wamv_gazebo/: CMakeLists.txt  package.xml
src/wamv_gazebo/launch/: odom_publisher.launch  rviz_odom.launch
src/wamv_gazebo/src/: odom_publisher.cpp
src/wamv_gazebo/urdf/: wamv_gazebo.urdf.xacro
src/wamv_gazebo/urdf/components/: lidar.xacro  wamv_3d_lidar.xacro  wamv_imu.xacro
(+8 files in other folders)
